--- a/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
+++ b/dreamwidth/dreamwidth/Base.lproj/Main.storyboard
@@ -203,10 +203,10 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dlK-Rj-S0f" customClass="BCHDWBannerView">
-                                                    <rect key="frame" x="0.0" y="18.5" width="263" height="40.5"/>
+                                                    <rect key="frame" x="0.0" y="18.5" width="263" height="38.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRD-B9-3eK">
-                                                            <rect key="frame" x="4" y="4" width="255" height="32.5"/>
+                                                            <rect key="frame" x="4" y="4" width="255" height="30.5"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -220,12 +220,20 @@
                                                         <constraint firstAttribute="bottom" secondItem="RRD-B9-3eK" secondAttribute="bottom" constant="4" id="oUh-Mf-lFJ"/>
                                                     </constraints>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nb9-q0-OwZ">
-                                                    <rect key="frame" x="0.0" y="63" width="263" height="16"/>
-                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9h7-pm-trw">
+                                                    <rect key="frame" x="0.0" y="61" width="263" height="18"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lock-icon" translatesAutoresizingMaskIntoConstraints="NO" id="rtp-4W-hZP">
+                                                            <rect key="frame" x="0.0" y="0.0" width="18" height="18"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nb9-q0-OwZ">
+                                                            <rect key="frame" x="18" y="0.0" width="245" height="18"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
                                             </subviews>
                                         </stackView>
                                     </subviews>
@@ -242,6 +250,7 @@
                                 <connections>
                                     <outlet property="avatarImageView" destination="fzP-H4-poW" id="nq2-j8-ixY"/>
                                     <outlet property="dateLabel" destination="Nb9-q0-OwZ" id="G5U-5S-inQ"/>
+                                    <outlet property="lockedImageView" destination="rtp-4W-hZP" id="sLX-gx-b92"/>
                                     <outlet property="titleLabel" destination="RRD-B9-3eK" id="IRo-dL-zqV"/>
                                     <outlet property="userLabel" destination="hSc-vM-uO3" id="xTt-Lg-nj0"/>
                                 </connections>
@@ -708,6 +717,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="lock-icon" width="18" height="18"/>
         <image name="onepassword-login-button" width="41" height="41"/>
     </resources>
 </document>
